<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud Talk - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2021 Andy Scherzinger <info@andy-scherzinger.de>
  ~ SPDX-FileCopyrightText: 2017-2018 Mario Danic <mario@lovelyhq.com>
  ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_login"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/standard_margin"
            android:contentDescription="@string/nc_app_product_name"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/icon_clps" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:maxWidth="@dimen/default_login_width"
            android:minWidth="@dimen/default_login_width"
            android:orientation="vertical"
            android:padding="@dimen/standard_half_padding">

            <!-- app:endIconDrawable="@drawable/ic_arrow_forward_white_24px"
                app:endIconContentDescription="@string/nc_server_connect"
                app:endIconMode="custom"
                app:endIconTint="@color/black_common" -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/serverEntryTextInputLayout"
                style="@style/Widget.App.Login.TextInputLayoutCLPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nc_server_url"
                android:theme="@style/TextInputLayoutLoginCLPS">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serverEntryTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:importantForAutofill="no"
                    android:inputType="textUri|textNoSuggestions"
                    android:lines="1"
                    android:minLines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/black_common"
                    android:textColorHint="@color/fontAppbar">

<!--                    <requestFocus />-->

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/host_url_input_helper_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="2dp"
                android:text="@string/nc_server_helper_text"
                android:textAlignment="viewStart"
                android:textColor="@color/disabled_text" />

            <LinearLayout
                android:id="@+id/serverEntryProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="2dp"
                android:visibility="gone"
                tools:visibility="visible">

                <ProgressBar
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center_vertical"
                    android:indeterminateTint="@color/colorAccent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:lineSpacingMultiplier="1.2"
                    android:lines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="8dp"
                    android:text="@string/nc_server_testing_connection"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/error_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="2dp"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:src="@android:drawable/stat_sys_warning"
                    app:tint="@color/favorite_icon_tint" />

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:lineSpacingMultiplier="1.2"
                    android:lines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/favorite_icon_tint"
                    tools:text="@string/nc_server_unsupported" />
            </LinearLayout>

            <Button
                android:id="@+id/check_server_and_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/clps_check_server"
                android:layout_marginTop="@dimen/header_main_padding_vertical_top"
                android:padding="8dp"
                style="@style/CustomMaterialButton"
                android:background="@drawable/custom_button_background"/>
            <ImageButton
                android:id="@+id/scan_Qr"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:layout_marginTop="@dimen/header_main_padding_vertical_top"
                android:scaleType="fitXY"
                android:background="@color/transparent"
                android:contentDescription="@string/scan_qr_code"
                android:src="@drawable/outline_qr_code_24"
                app:tint="@color/colorPrimaryDark"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/import_or_choose_provider_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:lineSpacingMultiplier="1.2"
                android:lines="2"
                android:minHeight="@dimen/min_size_clickable_area"
                android:padding="@dimen/standard_padding"
                android:text="@string/nc_get_from_provider"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/cert_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:lineSpacingMultiplier="1.2"
                android:lines="2"
                android:minHeight="@dimen/min_size_clickable_area"
                android:padding="@dimen/standard_padding"
                android:text="@string/nc_configure_cert_auth"
                android:textAlignment="center"
                android:textColor="@color/grey_600"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
